--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView2"
             android:layout_width="411dp"
             android:layout_height="674dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -128,6 +129,18 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:srcCompat="@android:drawable/ic_menu_search"
             tools:ignore="SpeakableTextPresentCheck" />
+
+        <ListView
+            android:id="@+id/listView69"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="7dp"
+            android:background="#F6EFEF"
+            app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
